konst/tests/misc_tests/iter_mod_ui_tests/iterator_wrong_assoc_type_err.stderr
error[E0271]: type mismatch resolving `<WrongItem as ConstIntoIter>::Item == u64`
  --> tests/misc_tests/iter_mod_ui_tests/iterator_wrong_assoc_type_err.rs:19:5
   |
19 |     konst::iter::for_each!{_ in WrongItem => }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<WrongItem as ConstIntoIter>::Item == u64`
   |
note: expected this to be `u64`
  --> tests/misc_tests/iter_mod_ui_tests/iterator_wrong_assoc_type_err.rs:8:17
   |
8  |     type Item = u8;
   |                 ^^
   = note: this error originates in the macro `$crate::__iter2_interpreter` which comes from the expansion of the macro `konst::iter::for_each` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<WrongIntoIter as ConstIntoIter>::IntoIter == WrongIntoIter`
  --> tests/misc_tests/iter_mod_ui_tests/iterator_wrong_assoc_type_err.rs:39:5
   |
39 |     konst::iter::for_each!{_ in WrongIntoIter => }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<WrongIntoIter as ConstIntoIter>::IntoIter == WrongIntoIter`
   |
note: expected this to be `WrongIntoIter`
  --> tests/misc_tests/iter_mod_ui_tests/iterator_wrong_assoc_type_err.rs:27:21
   |
27 |     type IntoIter = konst::slice::IterCopied<'static, u8>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected struct `WrongIntoIter`
              found struct `IterCopied<'static, u8>`
note: required by a bound in `IntoIterWrapper::<T, IsIteratorKind>::const_into_iter`
  --> src/iter.rs
   |
   |     pub const fn const_into_iter(self) -> T
   |                  --------------- required by a bound in this associated function
   |     where
   |         T: ConstIntoIter<IntoIter = T>,
   |                          ^^^^^^^^^^^^ required by this bound in `IntoIterWrapper::<T, IsIteratorKind>::const_into_iter`
   = note: this error originates in the macro `$crate::iter::into_iter` which comes from the expansion of the macro `konst::iter::for_each` (in Nightly builds, run with -Z macro-backtrace for more info)
